TER-54 TEST Added TrainingService tests